# agentic-api

./: .env.example  .gitattributes  .gitignore  .markdownlint.yaml  .prettierignore  CODEOWNERS.md  README.md  THIRD_PARTY_NOTICES.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  lint.yml  pages.yml  release-wheels.yml  wheels.yml
docs/: index.md
docs/adr/: ADR-01_core.md  ADR-02_response_store.md
docs/deployment/: configuration.md  observability.md
docs/examples/: code-interpreter-examples.md  hosted-mcp-examples.md  stateful-conversations.md  tool-loop-examples.md  web-search-examples.md
docs/features/: built-in-tools.md  hosted-mcp.md  statefulness.md  web-search.md
docs/getting-started/: architecture.md  installation.md  quickstart.md
docs/reference/: api-reference.md  configuration.md  events.md
docs/snippets/: mcp_builtin_request_payload.txt  mcp_discover_servers_tools_curl.txt  mcp_runtime_config_example.txt  openai_client_local_gateway.py  serve_external_upstream_cmd.txt
docs/usage/: command-reference.md  running-the-gateway.md  streaming-events.md
responses/: MANIFEST.in  README.md  pyproject.toml  setup.py
responses/tests/: conftest.py  sse_test_utils.py  test_app_extensions.py  test_code_interpreter.py  test_gateway_cassette_replay.py  test_gateway_statefulness.py  test_gateway_tool_metrics.py  test_integrated_app.py  test_integrated_runtime.py  test_integrated_spec.py  test_mcp.py  test_mcp_runtime_client.py  (+16 more)
scripts/: record_openai_mcp_chat_cassettes.py  recorder_proxy.py
tests/: conftest.py  test_vllm_cli.py
(+112 files in other folders)
