[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-stack"
version = "0.1.0"
description = "Stateful API logic for agentic applications using vLLM"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "Agentic Stack Community" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/vllm-project/agentic-stack"
Repository = "https://github.com/vllm-project/agentic-stack"
Issues = "https://github.com/vllm-project/agentic-stack/issues"
Documentation = "https://github.com/vllm-project/agentic-stack"

[dependency-groups]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-autorefs>=1.0.0",
    "mkdocs-awesome-nav>=0.11.0",
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocstrings[python]>=0.25.0",
]
